update Dockerfile and docker-compose

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -17,5 +17,5 @@ services:
       - '443:443'
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
-      - ./caddy/data:/data
-      - ./caddy/config:/config
+      - ~/caddy/data:/data
+      - ~/caddy/config:/config
