--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - '3000:3000'
     environment:
       DATABASE_URL: '${DATABASE_URL}'
-
+      JWT_SECRET: '${JWT_SECRET}'
   caddy:
     image: caddy:latest
     container_name: caddy
