--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,10 @@ services:
     build:
       context: .
       dockerfile: apps/web/Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: "${API_URL}"
     ports:
       - "3000:3000"
-    environment:
-      NEXT_PUBLIC_API_URL: "${API_URL}"
 
   caddy:
     image: caddy:latest
