--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,8 +14,12 @@ services:
     build:
       context: .
       dockerfile: apps/web/Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: "${NEXT_PUBLIC_API_URL}"
     ports:
       - "3000:3000"
+    depends_on:
+      - api
 
   caddy:
     image: caddy:latest
