--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,8 +23,24 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            set -e  # Exit if any command fails
+
             cd ~/nesty
+
+            echo "Pulling latest code..."
             git pull origin main
+
+            echo "Stopping old containers..."
+            docker-compose down
+
+            echo "Pruning stopped containers"
+            docker container prune -f
+
+            echo "Pruning unused images older than 24h"
+            docker image prune -af --filter "until=24h"
+
+            echo "Building and starting new containers"
             docker-compose up --build -d
-            docker system prune -af
+
+            echo "Deployment successful!"
           EOF
