--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
@@ -47,6 +48,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
