--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.10",
+    "@heroui/react": "^2.6.14",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
