--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,31 +13,54 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: nicolasvienot
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push API image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: apps/api/Dockerfile
+          push: true
+          tags: nicolasvienot/nesty-api:latest
+
+      - name: Build and push Web image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: apps/web/Dockerfile
+          push: true
+          tags: nicolasvienot/nesty-web:latest
+          build-args: |
+            NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
 
       - name: Deploy to EC2
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            set -e  # Exit if any command fails
-
+            set -e
             cd ~/nesty
-
+            
             echo "Pulling latest code..."
             git pull origin main
-
+            
+            echo "Pulling latest Docker images..."
+            docker pull nicolasvienot/nesty-api:latest
+            docker pull nicolasvienot/nesty-web:latest
+            
             echo "Stopping old containers..."
             docker-compose down
-
-            echo "Building and starting new containers"
-            docker-compose up --build -d
-
-            echo "Cleaning up unused Docker resources..."
+            
+            echo "Starting new containers..."
+            docker-compose up -d
+            
+            echo "Cleaning up..."
             docker system prune -af --volumes
-
+            
             echo "Deployment successful!"
           EOF
