--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,6 @@
 services:
   api:
-    build:
-      context: .
-      dockerfile: apps/api/Dockerfile
+    image: nicolasvienot/nesty-api:latest
     ports:
       - "8000:8000"
     environment:
@@ -11,11 +9,7 @@ services:
       FRONTEND_URL: "${FRONTEND_URL}"
 
   web:
-    build:
-      context: .
-      dockerfile: apps/web/Dockerfile
-      args:
-        NEXT_PUBLIC_API_URL: "${NEXT_PUBLIC_API_URL}"
+    image: nicolasvienot/nesty-web:latest
     ports:
       - "3000:3000"
     depends_on:
