--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,14 @@
 services:
+  redis:
+    image: redis:alpine
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+
   api:
     image: nicolasvienot/nesty-api:latest
     ports:
@@ -11,6 +21,8 @@ services:
       GOOGLE_CLIENT_ID: "${GOOGLE_CLIENT_ID}"
       GOOGLE_CLIENT_SECRET: "${GOOGLE_CLIENT_SECRET}"
       GOOGLE_REDIRECT_URI: "${GOOGLE_REDIRECT_URI}"
+    depends_on:
+      - redis
 
   web:
     image: nicolasvienot/nesty-web:latest
@@ -30,3 +42,6 @@ services:
       - ./infra/Caddyfile:/etc/caddy/Caddyfile
       - ~/caddy/data:/data
       - ~/caddy/config:/config
+
+volumes:
+  redis_data: {}
