--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
     "@prisma/client": "^6.3.0",
+    "@sendgrid/mail": "^8.1.4",
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "bull": "^4.16.5",
