--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,12 +33,14 @@
     "@nestjs/schedule": "^5.0.1",
     "@prisma/client": "^6.3.0",
     "@sendgrid/mail": "^8.1.4",
+    "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "bull": "^4.16.5",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
